--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -84,13 +84,13 @@ jobs:
           ref: main
           fetch-depth: 0
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - uses: mhanberg/gigalixir-action@v0.4.0
-        with:
-          GIGALIXIR_APP: ${{ secrets.GIGALIXIR_APP }}
-          GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_USERNAME }}
-          GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
-          SSH_PRIVATE_KEY: ${{ secrets.GIGALIXIR_SSH_PRIVATE_KEY }}
+      - run: sudo pip install gigalixir --ignore-installed six
+      - run: gigalixir login -e "${{ secrets.GIGALIXIR_USERNAME }}" -p "${{ secrets.GIGALIXIR_PASSWORD }}" -y
+      - run: gigalixir git:remote ${{ secrets.GIGALIXIR_APP }}
+      - run: git push -f gigalixir main
+      - run: mkdir ~/.ssh
+      - run: printf "Host *\n StrictHostKeyChecking no" > ~/.ssh/config
+      - run: echo "${{ secrets.GIGALIXIR_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+      - run: sudo chmod 0600 ~/.ssh/id_rsa
+      - run: ls -la ~/.ssh
+      - run: gigalixir ps:migrate -a ${{ secrets.GIGALIXIR_APP }}
